TM-68: Правки по UI-KIT, добавив favicon (#91)

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Travel-map</title>
+      <link rel="icon" href="./src/accets/travel-map-16px.png" />
+      <link rel="icon" href="./src/accets/travel-map-32px.png" />
   </head>
   <body>
     <div id="root"></div>
